sample-platform/amster.yaml
apiVersion: v1
kind: Pod
metadata:
  name: amster
spec:
  containers:
    - image: amster:fullstack
      imagePullPolicy: IfNotPresent
      name: amster
      resources:
          requests:
            memory: "256Mi"
