sample-platform/dj.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: dj
spec:
  serviceName: dj-service
  replicas: 2
  template:
    metadata:
      labels:
        role: persistence
    spec:
      containers:
        - image: forgerock/opendj:5.5.0
          imagePullPolicy: IfNotPresent
          name: opendj
          ports:
            - containerPort: 1389
              name: ldap
              protocol: TCP
            - containerPort: 4444
              name: djadmin
              protocol: TCP
          resources:
              requests:
                memory: "512Mi"
          readinessProbe:
            exec:
              command: ["/opt/opendj/probe.sh"]
            periodSeconds: 20
            initialDelaySeconds: 30
          livenessProbe:
            exec:
              command: ["/opt/opendj/probe.sh"]
            initialDelaySeconds: 300
            periodSeconds: 60
