sample-platform/idm.yml
apiVersion: v1
kind: Pod
metadata:
  name: idm
  labels:
    role: management
spec:
  containers:
    - image: idm:fullstack
      imagePullPolicy: IfNotPresent
      name: openidm
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      resources:
          requests:
            memory: "512Mi"
