sample-platform/ig.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ig
  labels:
    role: proxy
spec:
  containers:
    - image: ig:fullstack
      imagePullPolicy: IfNotPresent
      name: ig
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      resources:
          requests:
            memory: "512Mi"
