sample-platform/idm-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: idm-service
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    role: management
