sample-platform/pg.yml
kind: Service
apiVersion: v1
metadata:
  name: postgresql96-service
  labels:
    role: host
spec:
  clusterIP: None
  ports:
    - port: 5432
      name: database
  selector:
    type: postgresql96
